# airbus-octonion-tgv-solver

./: .gitignore  AGENTS.md  Makefile  README.md  SUBMISSION_MANIFEST.md  pyproject.toml  requirements.txt
airbus-octonion-tgv-solver_phase1_submission_20260704/phase1_pack_20260704_150902/: PHASE1_PROPOSAL_DRAFT.md  QUANTUM_HARDWARE_PATH.md  VALIDATION_PLAN.md
configs/: default.yaml  reynolds_sweep.yaml
docs/: AIRBUS_REQUIREMENTS_TRACE.md  EXECUTIVE_SUMMARY.md  PHASE1_PROPOSAL_DRAFT.md  TECHNICAL_RISK_REGISTER.md
results/advantage_20260704_085424/: metrics.csv  summary.json
results/advantage_20260704_090551/: metrics.csv  summary.json
results/perturbed_20260704_144108/: metrics.csv  summary.json
results/phase1_pack_20260704_150902/: EXECUTIVE_SUMMARY.md  config.yaml
results/phase1_pack_20260704_163427/: METHOD.md  QUANTUM_HARDWARE_PATH.md  UAV_ASSOCIATOR_TRANSFER.md  metrics.csv
results/phase1_pack_20260704_165125/: summary.json
results/scalability_20260704_141320/: metrics.csv  summary.json
results/scalability_20260704_143909/: metrics.csv  summary.json
scripts/: generate_phase1_pack.py  make_figures.py  run_advantage_study.py  run_perturbed_advantage_study.py  run_reynolds_sweep.py  run_scalability_projection.py  run_single.py  run_svd_baseline_study.py  run_trajectory_compression.py
src/airbus_tgv/: __init__.py  (+15 more)
submission_uploads/: TGV_All_Measured_Data.xlsx
tests/: test_associator.py  test_benchmark_metrics.py  test_exact_solution.py  test_finite_volume_mass_conservation.py  test_octonion_algebra.py  test_perturbation.py  test_trajectory.py
(+8 files in other folders)
