[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airbus-octonion-tgv-solver"
version = "0.1.0"
description = "Octonionic / Fano-plane associator-guided finite-volume solver for the 2D Convecting Taylor-Green Vortex (Airbus 2026 Quantum + AI Challenge)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Airbus Challenge Team"}]
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "pytest>=7.4",
    "psutil>=5.9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
tensor = ["tensorly>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
